[project]
name = "madrl-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "cloudpickle>=3.1.1",
    "imageio>=2.37.0",
    "importlib-metadata>=8.7.0",
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
    "pyyaml>=6.0.3",
    "torch==2.5.0+cu124",
    "torchvision==0.20.0+cu124",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88


[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
